# Bogodroid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bridges/: ctype_bridge.c  fcntl_bridge.c  fcntl_bridge.h  misc_bridges.c  ndk_bridge.cpp  ndk_bridge.h  pthread_bridge.c  stdio_bridge.c  stdio_bridge.h  symtables.h
configs/: limbo.toml  unity.toml
gamefiles/support_files/: cpuinfo.txt
javastubs/: android.cpp  android.h  javac.cpp  javac.h
libjnivm/include/jnivm/: jnitypes.h
libjnivm/src/fake-jni/: fake-jni.cpp
libjnivm/src/jnivm/: vm.cpp
platform/common/: platform.h  toml_include.cpp
projects/hexagonloader/: main.cpp
projects/hexagonloader/javastubs/: binding.h  jnibridge.h  unity.h
projects/limboloader/: main.cpp
projects/limboloader/javastubs/: binding.cpp  binding.h  limbo.cpp  limbo.h
projects/unityloader/: main.cpp
projects/unityloader/javastubs/: binding.cpp  jnibridge.cpp  jnibridge.h  unity.cpp
tools/: jnitrace_parse.py
tools/unity_traces/: parsed.json
